--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -63,7 +63,7 @@ their target audience to create create custom firmware installers motivated by t
 <dt>Next, unzip it e.g. in <code>C:\addons\nanovna-firmware-0.2.2</code>
 <dt>Next, to convert e.g. that <code>C:\addons\nanovna-firmware-0.2.2\build\ch.bin</code> to DFU format:
   <dd>Launch <code>DfuFileMgr.exe</code><br>
-  Choose <code>GENERATE DFU from BIN</code>. Click <code>OK</code>.<br>
+  Choose <code>GENERATE DFU from HEX</code> and click <code>OK</code>.<br>
   <img src="DFUmgr.gif"><br clear=all>
   Click <img align="middle" src="S19orHex.gif"> half way down on the right side.<br>
   Navigate to e.g. <code>C:\addons\nanovna-firmware-0.2.2\build\</code><br>
