rearranged map, adding SAVE after DONE

--- a/html/Hnano.htm
+++ b/html/Hnano.htm
@@ -345,27 +345,23 @@ a:visited {
         </dl> 
       </li>
       <li><p>FORMAT</p>
-	<ul>
-	<li><p>MORE</p>
-	    <dl>
-	      <dt><p>POLAR</p></dt>
-	      <dt><p>LINEAR</p></dt>
-	      <dt><p>REAL</p></dt>
-	      <dt><p>IMAG</p></dt>
-	      <dt><p>RESISTANCE</p></dt>
-	      <dt><p>REACTANCE</p></dt>
-            </dl>
-	</li>
- 	<li>
         <dl>
           <dd><p>LOGMAG</p></dd>
 	  <dt><p>PHASE</p></dt>
 	  <dt><p>DELAY</p></dt>
 	  <dt><p>SMITH</p></dt>
 	  <dt><p>SWR</p></dt>
+	  <dt><p>MORE</p>
+	    <dl>
+	      <dd><p>POLAR</p></dd>
+	      <dt><p>LINEAR</p></dt>
+	      <dt><p>REAL</p></dt>
+	      <dt><p>IMAG</p></dt>
+	      <dt><p>RESISTANCE</p></dt>
+	      <dt><p>REACTANCE</p></dt>
+            </dl>
+	  </dt>
         </dl>
-        </li>
- 	</ul>
       </li>
       <li><p>SCALE</p>
         <dl>
@@ -375,7 +371,7 @@ a:visited {
                <a href="#U133">NUM KEYS</a></p>
           </dt>
           <dt><p><tt>touch nanoVNA screen below menu to launch numeric keypad;<br>
-		     click hyperlink for numeric input discussion</tt>
+		     click link here for numeric input discussion</tt>
 		 <a href="#U132">REFERENCE POSITION</a></p>
 	      <p><tt>touch below menu to launch</tt>NUM KEYS</p>
 	  </dt>
@@ -445,18 +441,6 @@ a:visited {
   </li>
   <li><p><a href="#N4">CAL</a></p>
     <ul>
-      <li><p><tt>press RESET to clear data before calibrating.<br>
-	Make appropriate [dis]connections before touching associated button</tt>CALIBRATE</p>
-        <dl>
-          <dt><p>OPEN</p></dt>
-          <dt><p>SHORT</p></dt>
-          <dt><p><tt>attach 50 Ohm load to TX port</tt>LOAD</p></dt>
-          <dt><p><tt>attach a 50 Ohm load to each port</tt>ISOLATION</p></dt>
-          <dt><p><tt>connect SMA cable[s] between ports</tt>THRU</p></dt>
-          <dt><p>DONE</p>
-          </dt>
-        </dl>
-      </li>
       <li><p><tt>press after CALIBRATE or to preserve other settings</tt>SAVE</p>
             <dl>
               <dt><p>SAVE 0</p></dt>
@@ -467,6 +451,25 @@ a:visited {
             </dl>
       </li>
       <li><p><tt>press to clear data before CALIBRATE</tt>RESET</p></li>
+      <li><p><tt>press RESET to clear data before calibrating.<br>
+	Make appropriate [dis]connections before touching associated button</tt>CALIBRATE</p>
+        <dl>
+          <dt><p>OPEN</p></dt>
+          <dt><p>SHORT</p></dt>
+          <dt><p><tt>attach 50 Ohm load to TX port</tt>LOAD</p></dt>
+          <dt><p><tt>attach a 50 Ohm load to each port</tt>ISOLATION</p></dt>
+          <dt><p><tt>connect SMA cable[s] between ports</tt>THRU</p></dt>
+          <dt><p>DONE</p>
+            <dl>
+              <dd><p>SAVE 0</p></dd>
+              <dt><p>SAVE 1</p></dt>
+              <dt><p>SAVE 2</p></dt>
+              <dt><p>SAVE 3</p></dt>
+              <dt><p>SAVE 4</p></dt>
+            </dl>
+          </dt>
+        </dl>
+      </li>
       <li id="u30"><p><tt>toggle calibration<br>on / off</tt>CORRECTION</p></li>
     </ul>
   </li>
