--- a/html/Hnano.htm
+++ b/html/Hnano.htm
@@ -496,7 +496,12 @@ a:visited {
         <dt><p>TOUCH TEST</p></dt>
         <dt><p><tt>no obvious effect</tt>SAVE</p></dt>
         <dt><p>VERSION</p></dt>
-        <dt><p>DFU</p></dt>
+        <dt><p>DFU</p>
+	  <dl>
+	    <dd><p>RESET AND ENTER DFU</p></dd>
+	    <dt><p>CANCEL</p></dt>
+	  </dl>
+	</dt>
       </dl>
   </li>
 </ul>
