--- a/html/nVhelp.htm
+++ b/html/nVhelp.htm
@@ -250,7 +250,7 @@ but switching times &gt; 1ns limit local oscillators to <code>200MHz</code> or s
 
 <h4 id="DSP">DSP</h4> <em>thanks to Erik Kaashoek</em><br><br>
 
-SA612 ICs mix uncorrelated reference, Ch1 and Ch0 bridge unbalance signals<br>
+SA612 ICs mix reference, Ch1 and Ch0 bridge unbalance signals<br>
 to 5kHz intermediate frequency (IF) for Analog-to-Digital-Conversion (ADC).<br>
 To measure 3 independent signals,<br>
 stereo ADC internally switches one input between reflection and transmission.<br>
