--- a/html/Vnano.htm
+++ b/html/Vnano.htm
@@ -326,6 +326,10 @@ a:visited {
 <body translate="no">
 <base href="https://oristopo.github.io/nVhelp/html/nVhelp.htm">
 <h2 align=center><a href="#U0">nanoVNA</a> Menu for <font color=#999900><em>Sep 2019</em></font> firmware</h2>
+<p align=center>
+tool tips for many buttons are launched by hovering mouse pointer<br>
+more <a href="">help is linked by selecting</a> for buttons with underlined text<br>
+<em>some</em> submenus show <span style="background-color: #FFFFFF"><font color="black">ACTIVE</font></span> selection on LCD</p>
 
 <div class="tree">
 <p>Press control or touch screen for menu</p>
@@ -381,14 +385,22 @@ a:visited {
 	  </dt>
         </dl>
       </li>
-      <li><p><tt></tt>TRANSFORM</p>
+      <li><p><tt>for TDR</tt><a href="https://groups.io/g/nanovna-users/attachment/3083/0/TDR.pdf">TRANSFORM</a></p>
         <dl>
-          <dt><p><tt> </tt>TRANSFORM ON</p></dt>
-          <dt><p><tt> </tt>LOW PASS IMPULSE</p></dt>
-          <dt><p><tt> </tt>LOW PASS STEP</p></dt>
-          <dt><p><tt> </tt>BANDPASS</p></dt>
-          <dt><p><tt> </tt>WINDOW</p></dt>
-          <dt><p><tt> </tt>VELOCITY FACTOR</p></dt>
+          <dt><p><tt>enables LOW/BANDPASS</tt>TRANSFORM ON</p></dt>
+          <dt><p><tt>set REAL start 50kHz</tt>LOW PASS IMPULSE</p></dt>
+          <dt><p><tt>set REAL start 50kHz</tt>LOW PASS STEP</p></dt>
+          <dt><p><tt>set SWR, LINEAR or LOGMAG</tt>BANDPASS</p></dt>
+          <dt><p><tt>modifies LOW/BANDPASS</tt>WINDOW</p>
+	    <ul>
+	      <li><p><tt>max resolution</tt>MINIMUM</p></li>
+	      <li><p>NORMAL</p></li>
+	      <li><p><tt>max dymanic range</tt>MAXIMUM</p></li>
+            </ul>
+          </dt>
+          <dt><p><tt>tweak for actual distance</tt>VELOCITY FACTOR</p>
+	      <p><tt>touch below menu to launch</tt>NUM KEYS</p>
+          </dt>
         </dl> 
       </li>
       <li><p><tt>select port to measure;<br>
