--- a/html/nVhelp.htm
+++ b/html/nVhelp.htm
@@ -278,7 +278,7 @@ OFF disables <em>this</em> trace;  SINGLE disables <em>all other</em> traces...?
 <p>     <br />     <br />     <br />     <br />     <br />     <br />     <br />     <br /> </p>
 <p>     <br />     <br />     <br />     <br />     <br />     <br />     <br />     <br /> </p>
 <h4 id="U131">linked from SCALE/DIV</h4>
-<p>watch this space</p>
+<p>defaults to 10dB/dev for some DISPLAY FORMATs; I prefer 15dB/div</p>
 
 <h4 id="U133">linked from NUM KEYS</h4>
 <em>thanks to Mike Brown</em>
