Android DfuSe, touch cal,

--- a/html/Vnano.htm
+++ b/html/Vnano.htm
@@ -329,7 +329,7 @@ a:visited {
 <p align=center>
 tool tips for many buttons are launched by hovering mouse pointer<br>
 more <a href="">help is linked by selecting</a> for buttons with underlined text<br>
-<em>some</em> submenus show <span style="background-color: #FFFFFF"><font color="black">ACTIVE</font></span> selection on LCD</p>
+<em>some</em> submenus highlight <span style="background-color: #FFFFFF"><font color="black">ACTIVE</font></span> selection on LCD</p>
 
 <div class="tree">
 <p>Press control or touch screen for menu</p>
@@ -468,9 +468,9 @@ more <a href="">help is linked by selecting</a> for buttons with underlined text
         <dl>
           <dt><p>OPEN</p></dt>
           <dt><p>SHORT</p></dt>
-          <dt><p><tt>attach 50 Ohm load to TX port</tt>LOAD</p></dt>
-          <dt><p><tt>attach a 50 Ohm load to each port</tt>ISOLATION</p></dt>
-          <dt><p><tt>connect SMA cable[s] between ports</tt>THRU</p></dt>
+          <dt><p><tt>attach 50 Ohm load to CH0</tt>LOAD</p></dt>
+          <dt><p><tt>attach 50 Ohm loads to CHO + CH1</tt>ISOLATION</p></dt>
+          <dt><p><tt>connect cable[s] CH0<=>CH1</tt>THRU</p></dt>
           <dt><p>DONE</p>
             <ul>
               <li><p>SAVE 0</p></li>
@@ -504,9 +504,9 @@ more <a href="">help is linked by selecting</a> for buttons with underlined text
 	CONFIG
     </p>
       <dl>
-        <dd><p>TOUCH CAL</p></dd>
-        <dt><p>TOUCH TEST</p></dt>
-        <dt><p><tt>no obvious effect</tt>SAVE</p></dt>
+        <dd><p><a href="#TSC">TOUCH CAL</a></p></dd>
+        <dt><p><a href="#TSC">TOUCH TEST</a></p></dt>
+        <dt><p><tt>touchscreen calibration</tt>SAVE</p></dt>
         <dt><p>VERSION</p></dt>
         <dt><p>DFU</p>
 	  <dl>
