--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -76,6 +76,8 @@ their target audience to create create custom firmware installers motivated by t
   to flash NanoVNA by <code>DfuSe Demo 3.0.6.exe</code>.
 </dl>
 </details>
+<br>
+<dt><a href="https://groups.io/g/nanovna-users/message/3487">Android DfuSe programming</a>
 
 <br><br>
 <dt>
