new firmware; smith tooltip white border

--- a/html/Vnano.htm
+++ b/html/Vnano.htm
@@ -322,7 +322,7 @@ a:visited {
   visibility: hidden;
   display:block;
   min-width: 20px;
-  border: 1px solid #111111;
+  border: 1px solid #FFFFFF;
   background: url(smith.jpg) no-repeat;
   min-width:64px;
   min-height:51px;
