--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -108,15 +108,18 @@ or <code>800</code> versions for devices with weaker high frequency performance<
 <h4>
 <dl>
 <br><dt><a href="https://groups.io/g/nanovna-users/files/Firmware/All%20%28known%29%20publicly%20available%20NanoVNA%20DFU%20files%20from%20May%205,%202019%20through%20to%20Sept%2029,%202019/DMR/DMR-CLEAR_MEMORY_DFU.dfu">DMR-CLEAR_MEMORY_DFU.dfu</a> clears device flash memory.
-<dd>Your device will <em>not</em> again work until <em>after</em> re-load <em>some other</em> firmware.<br>
+<dd>Your device will <em>not</em> again work until <em>after</em> re-loading <em>some other</em> firmware.<br>
   It is used to "clean the slate" prior to installing <em>other</em> firmware, but is <em>rarely</em> needed.<br>
 Some few firmware installations fail until after first loading "DMR-CLEAR_MEMORY_DFU.dfu",<br>
 which FWIW is identical to <code>DMR Aug 31</code> "Stuck on firmware?" append: <a href="https://groups.io/g/nanovna-users/message/1583">FILL FF DFU.dfu</a>
 
 <br><br><dt>Larry Rothman's <a href="https://groups.io/g/nanovna-users/files/Firmware/All%20%28known%29%20publicly%20available%20NanoVNA%20DFU%20files%20from%20May%205,%202019%20through%20to%20Sept%2029,%202019">Firmware Archive</a>
-<dd>much of that content is described below
+<dd>some of that content is described below
 
-<br><br><dt>latest build code: 10KHz-1.5GHz_05.10.2019.rar
+<br><br><dt>edy555 0.2.3 TRACE and MARKER menu toggle changes <em>Oct 7 2019</em>
+<dd>Larry Rothman <a href="https://groups.io/g/nanovna-users/message/4268">message append</a>
+
+<br><br><dt>10KHz-1.5GHz_05.10.2019.rar
 <dd>DMR <a href="https://groups.io/g/nanovna-users/message/4073">message append</a>
 
 <br><br><dt>Gen Hu Google Drive 
