--- a/html/Menu.htm
+++ b/html/Menu.htm
@@ -163,6 +163,12 @@ a:visited {
   margin-bottom: -120px;
 }
 
+#ru120 {
+  margin-bottom: -120px;
+  margin-right: -50px;
+}
+
+
 /* horizontal branches */
 .tree dl {
   position: relative;
@@ -429,7 +435,7 @@ more <a href="">help is linked by selecting</a> for buttons with underlined text
           <dt><p><tt>set REAL start 50kHz</tt>LOW PASS IMPULSE</p></dt>
           <dt><p><tt>set REAL start 50kHz</tt>LOW PASS STEP</p></dt>
           <dt><p><tt>set SWR, LINEAR or LOGMAG</tt>BANDPASS</p></dt>
-          <dt id="u120"><p><tt>modifies LOW/BANDPASS</tt>WINDOW</p>
+          <dt id="ru120"><p><tt>modifies LOW/BANDPASS</tt>WINDOW</p>
 	    <ul>
 	      <li><p><tt>max resolution</tt>MINIMUM</p></li>
 	      <li><p>NORMAL</p></li>
